# Zepra

./: .gitattributes  .gitignore  API_BLOCKED_BY_DESIGN.md  API_SUPPORT.md  Architecture.md  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  Info.nxpt  LEGAL.md  LICENSE  README.md  ZepraWebApiPolicy.md  build.sh  build_full.sh  build_log.txt  install.sh
source/integration/: CMakeLists.txt  nxfont.h  nximage_stub.h  nxrender_ffi_stubs.h  nxsvg_wrapper.h  reox_browser_runtime.h  reox_nxrender_bridge.h  stb_image.h  webcore_bridge.h  zepra_browser.cpp
source/integration/common/: constants.h  types.h
source/integration/include/: browser_components.h  nxrender.h  nxsvg.h
source/integration/src/: browser_context.cpp  dom_bridge.cpp  reox_integration.cpp  webcore_integration.cpp
source/integration/src/stubs/: microtask_drain_stub.cpp
source/integration/stubs/: tab_suspender_stubs.cpp  webgl_stubs.cpp
source/nxbase/: CMakeLists.txt  nxbase.h
source/nxbase/include/: nxbase.h
source/nxbase/src/: allocator.cpp  buffer.cpp  log.cpp  string.cpp
source/nxjson/: CMakeLists.txt  nxjson.h  writer.cpp
source/nxjson/include/: nxjson.h
source/nxjson/src/: parser.cpp  writer.cpp
source/nxrender-cpp/: CMakeLists.txt  nxrender.cpp  nxrender_cpp.h
source/nxrender-cpp/accessibility/: accessibility_tree.cpp
source/nxrender-cpp/animation/: scroll_physics.cpp  spring.cpp
source/nxrender-cpp/core/: compositor.cpp  damage_tracker.cpp  damage_tracker.h  render_tile.cpp  render_tile.h  surface.cpp  surface.h
source/nxrender-cpp/include/animation/: animator.h  easing.h  scroll_physics.h  spring.h
source/nxrender-cpp/include/core/: compositor.h  layer.h  surface.h
source/nxrender-cpp/include/input/: events.h  keyboard.h  mouse.h
source/nxrender-cpp/include/layout/: constraints.h  flexbox.h  float_manager.h  grid.h  layout.h  layout_input.h  line_layout.h  writing_mode.h
source/nxrender-cpp/include/nxgfx/: color.h  context.h  context3d.h  primitives.h  svg.h  text.h
source/nxrender-cpp/include/theme/: colors.h  theme.h
source/nxrender-cpp/include/widgets/: button.h  checkbox.h  container.h  dropdown.h  label.h  (+6 more)
source/nxrender-cpp/input/: event.h  event_router.cpp  event_router.h  focus_manager.cpp  focus_manager.h  shortcut_manager.cpp  shortcut_manager.h
source/nxrender-cpp/layout/: advanced_layout.cpp  advanced_layout.h  stacking_context.cpp
source/nxrender-cpp/nxgfx/: transform.cpp  transform.h
source/nxrender-cpp/platform/: linux_x11.cpp  platform.h
source/nxrender-cpp/src/: nxrender.cpp
source/nxrender-cpp/web/: accessibility.cpp  accessibility.h  animation.cpp  animation.h  containment.cpp  containment.h  document_view.cpp  document_view.h  events.cpp  events.h  forms.cpp  forms.h  frame_orchestrator.cpp  frame_orchestrator.h  input.cpp  input.h  observers.cpp  observers.h  resource_loader.cpp  resource_loader.h
source/nxrender-cpp/widgets/: button.cpp  button.h  checkbox.cpp  checkbox.h  datagrid.cpp  datagrid.h  dropdown.cpp  dropdown.h  label.cpp  label.h  slider.cpp  slider.h  tree_view.cpp  tree_view.h  widget.cpp  widget.h
source/webCore/: CMakeLists.txt
source/webCore/browser/: css_utils.cpp  layout_engine.cpp  layout_engine.h  nxrender_layout_bridge.cpp
source/webCore/css/: css_cascade.cpp  css_computed_style.cpp  css_computed_style.hpp  css_engine.cpp  css_engine.hpp  style_resolver.cpp  ua_stylesheet.cpp  ua_stylesheet.h
source/webCore/include/: nxgfx_context.hpp  page.hpp  page_renderer.hpp  paint_context.hpp  script_context.hpp  sdl_gl_context.hpp  style_resolver_adapter.hpp  theme.hpp  webgl_bindings.hpp
source/webCore/rendering/: compositor.cpp  render_tree.cpp
source/webCore/scripting/: script_context.cpp
source/webCore/src/: dom.cpp  event_target.cpp  html_parser.cpp  nxgfx_context.cpp  script_context.cpp  webgl_context.cpp
source/zepraScript/src/: CMakeLists.txt
test/: CMakeLists.txt  browser_test_runner.cpp  config_test.cpp  css_cascade_test.cpp  gc_capacity_test.cpp  nxcrypto_tests.cpp  nxhttp_security_test.cpp  nxhttp_tests.cpp  smart_ram_allocator_test.cpp  visual_test_nxsvg  visual_test_nxsvg.cpp
test/crashtest/: compute_crash.html  gpu_oom.html  iframe_bomb.html
test/htmltest/: test_css_cascade.html
test/jstest/: test_javascript.html
test/layouttest/: test_layout.html  zepracolor.html
test/manualtest/: animations_transitions.html  canvas_stress.html  fps_stress.html  js_runner.html  nested_layout.html  reflow_thrashing.html  semantic_tags.html  svg_render.html  text_layout.html
test/manualtest/js/: array_methods.js  async_fetch.js  closure_leak.js  dom_api.js  gc_stress.js  heavy_computation.js  json_parse.js  matrix_math.js  regexp_stress.js
test/securitytest/: cors_check.html  xss_vectors.html
test/ui/: start.html
test/zeprascript/: CMakeLists.txt  ZepraScriptTestRunner.cpp  test_helpers.h  test_module.js
test/zeprascript/browser_apis/: fetch_test.cpp  secure_storage_test.cpp
test/zeprascript/gc/: gc_generational_test.cpp  gc_stress_test.cpp  gc_tab_isolation_test.cpp
test/zeprascript/integration/: browser_vm_integration_test.cpp  fetch_tests.cpp  indexeddb_tests.cpp  module_tests.cpp  promise_tests.cpp
test/zeprascript/interpreter/: interpreter_edge_cases_test.cpp
test/zeprascript/jit/: jit_correctness_test.cpp
test/zeprascript/js/: api_audit.js  builtin_tests.js  core_tests.js  full_compliance_test.js  p1_api_test.js
test/zeprascript/runtime/: smart_ram_allocator_test.cpp  tab_lifecycle_test.cpp
test/zeprascript/spec/: SpecTestRunner.cpp
test/zeprascript/unit/: JITTests.cpp  RuntimeTests.cpp  WASMTests.cpp  async_tests.cpp  browser_integration_tests.cpp  builtin_tests.cpp  class_tests.cpp  gc_concurrent_stress_test.cpp  gc_tests.cpp  generator_tests.cpp  jit_stress_test.cpp  lexer_tests.cpp  parser_tests.cpp  robustness_tests.cpp  runtime_tests.cpp  sandbox_tests.cpp  stress_tests.cpp  url_tests.cpp  value_tests.cpp  vm_stress_test.cpp  vm_tests.cpp  wasm_tests.cpp  zeprascript_comprehensive_tests.cpp  zir_tests.cpp
test/zeprascript/wasm/: wasm_execution_test.cpp
(+1031 files in other folders)
